--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nprogress": "^0.2.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-wechat-title": "^2.0.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
